Set up core data to get and store metro station information, request user location in anticipation of showing data based off of this

--- a/H8Z2BL8/Podfile
+++ b/H8Z2BL8/Podfile
@@ -4,6 +4,7 @@ target 'H8Z2BL8' do
   use_frameworks!
 
   pod 'SwiftyJSON', '3.1.4'
+  pod 'MBProgressHUD', '~> 1.0.0'
 
   target 'H8Z2BL8Tests' do
     inherit! :search_paths
